added flexbox on cover section

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="css/style.css">
 
 
-    <title>Document</title>
+    <title>DH SPORTS</title>
 </head>
 <body>
 
@@ -29,7 +29,9 @@
     </nav>
 
 	<section class="cover">
-		<h1>Make your decision right</h1>
+		<div class="wrapper">
+			<h1>Make your decision right</h1>
+		</div>
 	</section>
 
 
