added filter on cover img

--- a/index.html
+++ b/index.html
@@ -29,8 +29,13 @@
     </nav>
 
 	<section class="cover">
-		<div class="wrapper">
-			<h1>Make your decision right</h1>
+		<div class="filter">
+			<div class="description-container">
+				<h1><span class="red-title">Run fast,</span><br>go past</h1>
+				<p> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellendus, distinctio.
+					Delectus consectetur culpa, quo nam. Numquam optio, deserunt ea libero. Error,
+					natus optio enim qui.</p>
+			</div>
 		</div>
 	</section>
 
