Added features section

--- a/index.html
+++ b/index.html
@@ -39,6 +39,36 @@
 		</div>
 	</section>
 
+	<!-- FEATURES -->
+	<section class="features">
+		<div class="feature">
+			<div class="icon-container">
+				<span class="fa fa-address-card-o icon"></span>
+			</div>
+			<div class="description-container">
+				<h4 class="title">Awesome Product</h4>
+				<p class="description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore quasi alias magnam animi odit dolores.</p>
+			</div>
+		</div>
+		<div class="feature">
+			<div class="icon-container">
+				<span class="fa fa-clock-o icon"></span>
+			</div>
+			<div class="description-container">
+				<h4 class="title">Kill Deadlines</h4>
+				<p class="description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore quasi alias magnam animi odit dolores.</p>
+			</div>
+		</div>
+		<div class="feature">
+			<div class="icon-container">
+				<span class="fa fa-book icon"></span>
+			</div>
+			<div class="description-container">
+				<h4 class="title">Knowledge is Power</h4>
+				<p class="description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore quasi alias magnam animi odit dolores.</p>
+			</div>
+		</div>
+	</section>
 
 	<script src="js/jquery.min.js"></script>
 	<script src="js/menu.js"></script>
