--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato:400,700,900|Montserrat:400,700">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato:100,200,400,600|Montserrat:200,400,600,900">
     <link rel="stylesheet" href="css/style.css">
 
 
@@ -31,8 +31,8 @@
 	<section class="cover">
 		<div class="filter">
 			<div class="description-container">
-				<h1><span class="red-title">Run fast,</span><br>go past</h1>
-				<p> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellendus, distinctio.
+				<h1 class="cover__title"><span class="cover__title--red">Run fast,</span><br>go past</h1>
+				<p class="cover__text"> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellendus, distinctio.
 					Delectus consectetur culpa, quo nam. Numquam optio, deserunt ea libero. Error,
 					natus optio enim qui.</p>
 			</div>
@@ -46,8 +46,9 @@
 				<span class="fa fa-address-card-o icon"></span>
 			</div>
 			<div class="description-container">
-				<h4 class="title">Awesome Product</h4>
-				<p class="description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore quasi alias magnam animi odit dolores.</p>
+				<h4 class="feature__title">Awesome Product</h4>
+				<p class="feature__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore quasi alias magnam animi odit dolores.</p>
+				<a class="feature__btn" href="#">Learn More</a>
 			</div>
 		</div>
 		<div class="feature">
@@ -55,8 +56,9 @@
 				<span class="fa fa-clock-o icon"></span>
 			</div>
 			<div class="description-container">
-				<h4 class="title">Kill Deadlines</h4>
-				<p class="description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore quasi alias magnam animi odit dolores.</p>
+				<h4 class="feature__title">Kill Deadlines</h4>
+				<p class="feature__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore quasi alias magnam animi odit dolores.</p>
+				<a class="feature__btn" href="#">Learn More</a>
 			</div>
 		</div>
 		<div class="feature">
@@ -64,8 +66,9 @@
 				<span class="fa fa-book icon"></span>
 			</div>
 			<div class="description-container">
-				<h4 class="title">Knowledge is Power</h4>
-				<p class="description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore quasi alias magnam animi odit dolores.</p>
+				<h4 class="feature__title">Knowledge is Power</h4>
+				<p class="feature__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore quasi alias magnam animi odit dolores.</p>
+				<a class="feature__btn" href="#">Learn More</a>
 			</div>
 		</div>
 	</section>
