--- a/index.html
+++ b/index.html
@@ -14,17 +14,17 @@
 <body>
 
     <!-- NAV -->
-    <nav>
-		<a href="#"><img src="img/logo.png" alt="" class="logo"></a>
-		<div class="menu-handler">
+    <nav class="nav">
+		<a href="#"><img class="nav__logo" src="img/logo.png" alt=""></a>
+		<div class="nav__handler">
 			<div class="icon-menu"></div>
 		</div>
-        <ul class="menu">
-            <li><a href="#">Home</a></li>
-            <li><a href="#">Portfolio</a></li>
-            <li><a href="#">Features</a></li>
-            <li><a href="#">About</a></li>
-            <li><a href="#">Contact</a></li>
+        <ul class="nav__list">
+            <li class="nav__item"><a class="nav__link" href="#">Home</a></li>
+            <li class="nav__item"><a class="nav__link" href="#">Portfolio</a></li>
+            <li class="nav__item"><a class="nav__link" href="#">Features</a></li>
+            <li class="nav__item"><a class="nav__link" href="#">About</a></li>
+            <li class="nav__item"><a class="nav__link" href="#">Contact</a></li>
         </ul>
     </nav>
 
@@ -43,7 +43,7 @@
 	<section class="features">
 		<div class="feature">
 			<div class="icon-container">
-				<span class="fa fa-address-card-o icon"></span>
+				<span class="feature__icon  fa fa-address-card-o"></span>
 			</div>
 			<div class="description-container">
 				<h4 class="feature__title">Awesome Product</h4>
@@ -53,7 +53,7 @@
 		</div>
 		<div class="feature">
 			<div class="icon-container">
-				<span class="fa fa-clock-o icon"></span>
+				<span class="feature__icon  fa fa-clock-o"></span>
 			</div>
 			<div class="description-container">
 				<h4 class="feature__title">Kill Deadlines</h4>
@@ -63,7 +63,7 @@
 		</div>
 		<div class="feature">
 			<div class="icon-container">
-				<span class="fa fa-book icon"></span>
+				<span class="feature__icon  fa fa-book"></span>
 			</div>
 			<div class="description-container">
 				<h4 class="feature__title">Knowledge is Power</h4>
