--- a/index.html
+++ b/index.html
@@ -14,25 +14,26 @@
 <body>
 
     <!-- NAV -->
-    <nav class="nav">
-		<a href="#"><img class="nav__logo" src="img/logo.png" alt=""></a>
-		<div class="nav__handler">
+    <nav class="header">
+		<a href="#"><img class="nav-logo" src="img/logo.png" alt=""></a>
+		<div class="nav-handler">
 			<div class="icon-menu"></div>
 		</div>
-        <ul class="nav__list">
-            <li class="nav__item"><a class="nav__link" href="#">Home</a></li>
-            <li class="nav__item"><a class="nav__link" href="#">Portfolio</a></li>
-            <li class="nav__item"><a class="nav__link" href="#">Features</a></li>
-            <li class="nav__item"><a class="nav__link" href="#">About</a></li>
-            <li class="nav__item"><a class="nav__link" href="#">Contact</a></li>
+        <ul class="nav">
+            <li><a href="#">Home</a></li>
+            <li><a href="#">Portfolio</a></li>
+            <li><a href="#">Features</a></li>
+            <li><a href="#">About</a></li>
+            <li><a href="#">Contact</a></li>
         </ul>
     </nav>
 
+	<!-- COVER -->
 	<section class="cover">
 		<div class="filter">
 			<div class="description-container">
-				<h1 class="cover__title"><span class="cover__title--red">Run fast,</span><br>go past</h1>
-				<p class="cover__text"> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellendus, distinctio.
+				<h1 class="title"><span class="title-red">Run fast,</span><br>go past</h1>
+				<p class="text"> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellendus, distinctio.
 					Delectus consectetur culpa, quo nam. Numquam optio, deserunt ea libero. Error,
 					natus optio enim qui.</p>
 			</div>
@@ -43,38 +44,71 @@
 	<section class="features">
 		<div class="feature">
 			<div class="icon-container">
-				<span class="feature__icon  fa fa-address-card-o"></span>
+				<span class="fa fa-address-card-o"></span>
 			</div>
 			<div class="description-container">
-				<h4 class="feature__title">Awesome Product</h4>
-				<p class="feature__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore quasi alias magnam animi odit dolores.</p>
-				<a class="feature__btn" href="#">Learn More</a>
+				<h4 class="title">Awesome Product</h4>
+				<p class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore quasi alias magnam animi odit dolores.</p>
+				<a class="btn" href="#">Learn More</a>
 			</div>
 		</div>
 		<div class="feature">
 			<div class="icon-container">
-				<span class="feature__icon  fa fa-clock-o"></span>
+				<span class="fa fa-clock-o"></span>
 			</div>
 			<div class="description-container">
-				<h4 class="feature__title">Kill Deadlines</h4>
-				<p class="feature__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore quasi alias magnam animi odit dolores.</p>
-				<a class="feature__btn" href="#">Learn More</a>
+				<h4 class="title">Kill Deadlines</h4>
+				<p class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore quasi alias magnam animi odit dolores.</p>
+				<a class="btn" href="#">Learn More</a>
 			</div>
 		</div>
 		<div class="feature">
 			<div class="icon-container">
-				<span class="feature__icon  fa fa-book"></span>
+				<span class="fa fa-book"></span>
 			</div>
 			<div class="description-container">
-				<h4 class="feature__title">Knowledge is Power</h4>
-				<p class="feature__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore quasi alias magnam animi odit dolores.</p>
-				<a class="feature__btn" href="#">Learn More</a>
+				<h4 class="title">Knowledge is Power</h4>
+				<p class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore quasi alias magnam animi odit dolores.</p>
+				<a class="btn" href="#">Learn More</a>
 			</div>
 		</div>
 	</section>
 
+	<footer class="footer">
+		<div class="wrapper">
+			<div class="description-container">
+				<h4 class="title">Contact</h4>
+				<ul>
+					<li>Carrer Mas Oliva, 34</li>
+					<li>17480, Roses</li>
+					<li><a href="">info@dh-sports.es</a></li>
+				</ul>
+			</div>
+			<div class="description-container">
+				<h4 class="title">About our Company</h4>
+				<p class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iure eligendi ratione beatae eum voluptas repellendus hic deleniti, voluptates repudiandae, ipsam, aperiam fugit sed, soluta totam dolores. Quasi reiciendis non quia mollitia voluptatem ipsa beatae porro!</p>
+			</div>
+		</div>
+		<hr>
+		<ul class="social-icons">
+			<li>
+				<a href="http://www.facebook.com/centreMEFroses/"><i class="fa fa-facebook"></i></a>
+			</li>
+			<li>
+				<a href="http://www.youtube.com/watch?v=TSIBKYSbtfo"><i class="fa fa-twitter"></i></a>
+			</li>
+			<li>
+				<a href="http://www.instagram.com/centremef/"><i class="fa fa-instagram"></i></a>
+			</li>
+			<li>
+				<a href="http://www.youtube.com/watch?v=TSIBKYSbtfo"><i class="fa fa-youtube-play"></i></a>
+			</li>
+		</ul>
+		<!-- <p>&copy;2017 DH SPORTS, all rights reserved.</p> -->
+	</footer>
+
 	<script src="js/jquery.min.js"></script>
-	<script src="js/menu.js"></script>
+	<script src="js/nav.js"></script>
 
 </body>
 </html>
