added new section

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato:100,200,400,600|Montserrat:200,400,600,900">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:100,200,400,600|Open+Sans:200,400,600,900">
     <link rel="stylesheet" href="css/style.css">
 
 
@@ -74,37 +74,57 @@
 		</div>
 	</section>
 
-	<footer class="footer">
+    <section class="trail">
+        <div class="filter">
+            <div class="description-container">
+                <h2 class="title">Trail pic de l'aliga</h2>
+				<h3 class="subtitle">Another way of understanding nature</h3>
+                <p class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Saepe ad quod excepturi numquam, odit alias veritatis,
+					 			itaque consequuntur maiores facere cumque harum reiciendis temporibus esse ex, non aliquid modi porro minus quasi
+								consectetur. Ipsam placeat, voluptatibus, necessitatibus inventore dolore numquam ipsum assumenda doloribus delectus
+								voluptate incidunt. Magnam ratione cumque ipsam.</p>
+                <a class="btn" href="#">Learn More</a>
+            </div>
+        </div>
+    </section>
+
+
+	<footer class="main-footer">
 		<div class="wrapper">
 			<div class="description-container">
 				<h4 class="title">Contact</h4>
 				<ul>
-					<li>Carrer Mas Oliva, 34</li>
-					<li>17480, Roses</li>
+					<li>Carrer del Puig Rom, 96</li>
+					<li>17480 Roses, Girona</li>
 					<li><a href="">info@dh-sports.es</a></li>
 				</ul>
 			</div>
 			<div class="description-container">
 				<h4 class="title">About our Company</h4>
-				<p class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iure eligendi ratione beatae eum voluptas repellendus hic deleniti, voluptates repudiandae, ipsam, aperiam fugit sed, soluta totam dolores. Quasi reiciendis non quia mollitia voluptatem ipsa beatae porro!</p>
+				<p class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iure eligendi ratione beatae
+								eum voluptas repellendus hic deleniti, voluptates repudiandae, ipsam, aperiam fugit sed,
+								soluta totam dolores. Quasi reiciendis non quia mollitia voluptatem ipsa beatae porro!</p>
 			</div>
 		</div>
 		<hr>
 		<ul class="social-icons">
 			<li>
-				<a href="http://www.facebook.com/centreMEFroses/"><i class="fa fa-facebook"></i></a>
+				<a href="#"><i class="fa fa-facebook"></i></a>
 			</li>
 			<li>
-				<a href="http://www.youtube.com/watch?v=TSIBKYSbtfo"><i class="fa fa-twitter"></i></a>
+				<a href="#"><i class="fa fa-twitter"></i></a>
 			</li>
 			<li>
-				<a href="http://www.instagram.com/centremef/"><i class="fa fa-instagram"></i></a>
+				<a href="#"><i class="fa fa-instagram"></i></a>
 			</li>
 			<li>
-				<a href="http://www.youtube.com/watch?v=TSIBKYSbtfo"><i class="fa fa-youtube-play"></i></a>
+				<a href="#"><i class="fa fa-youtube-play"></i></a>
 			</li>
 		</ul>
-		<!-- <p>&copy;2017 DH SPORTS, all rights reserved.</p> -->
+	</footer>
+
+	<footer class="secondary-footer">
+		<p>&copy;Copyright 2017 DH SPORTS. All rights reserved</p>
 	</footer>
 
 	<script src="js/jquery.min.js"></script>
