Added new sections and mediaqueries

--- a/index.html
+++ b/index.html
@@ -4,16 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-
+	<!-- Google Fonts  -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:100,200,400,600|Open+Sans:200,400,600,900">
+	<!-- Custom CSS  -->
     <link rel="stylesheet" href="css/style.css">
-
-
     <title>DH SPORTS</title>
 </head>
 <body>
 
-    <!-- NAV -->
+    <!-- HEADER -->
     <nav class="header">
 		<a href="#"><img class="nav-logo" src="img/logo.png" alt=""></a>
 		<div class="nav-handler">
@@ -74,21 +73,129 @@
 		</div>
 	</section>
 
-    <section class="trail">
-        <div class="filter">
-            <div class="description-container">
-                <h2 class="title">Trail pic de l'aliga</h2>
+	<!-- TRAIL -->
+	<section id="marxa-trail" class="main-section">
+		<div class="filter">
+			<div class="description-container">
+				<h2 class="title">Marxa Trail pic de l'aliga</h2>
 				<h3 class="subtitle">Another way of understanding nature</h3>
-                <p class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Saepe ad quod excepturi numquam, odit alias veritatis,
-					 			itaque consequuntur maiores facere cumque harum reiciendis temporibus esse ex, non aliquid modi porro minus quasi
+				<p class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Saepe ad quod excepturi numquam, odit alias veritatis,
+								itaque consequuntur maiores facere cumque harum reiciendis temporibus esse ex, non aliquid modi porro minus quasi
 								consectetur. Ipsam placeat, voluptatibus, necessitatibus inventore dolore numquam ipsum assumenda doloribus delectus
 								voluptate incidunt. Magnam ratione cumque ipsam.</p>
-                <a class="btn" href="#">Learn More</a>
-            </div>
-        </div>
-    </section>
+				<a class="btn" href="#">Learn More</a>
+			</div>
+		</div>
+	</section>
 
+	<!-- TRAINERS -->
+	<section class="trainers">
+		<h2 class="section-title">Trainers</h2>
+		<div class="desktop-wrapper">
+		    <div class="trainer">
+		        <div class="img-container">
+		            <img class="img" src="img/ppl.jpg" alt="">
+		        </div>
+		        <div class="description-container">
+		            <h4 class="title">Jordi Vicens</h4>
+		            <p class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore quasi alias magnam animi odit dolores.</p>
+		        </div>
+		    </div>
+		    <div class="trainer">
+		        <div class="img-container">
+		            <img class="img" src="img/ppl.jpg" alt="">
+		        </div>
+		        <div class="description-container">
+		            <h4 class="title">Alfons</h4>
+		            <p class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore quasi alias magnam animi odit dolores.</p>
+		        </div>
+		    </div>
+		    <div class="trainer">
+		        <div class="img-container">
+		            <img class="img" src="img/ppl.jpg" alt="">
+		        </div>
+		        <div class="description-container">
+		            <h4 class="title">Nelson</h4>
+		            <p class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore quasi alias magnam animi odit dolores.</p>
+		        </div>
+		    </div>
+		</div>
+	</section>
 
+	<!-- ESPORTS PLATJA -->
+	<section id="esports-platja" class="main-section">
+		<div class="filter">
+			<div class="description-container">
+				<h2 class="title">Esports de platja</h2>
+				<h3 class="subtitle">Another way of understanding nature</h3>
+				<p class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Saepe ad quod excepturi numquam, odit alias veritatis,
+								itaque consequuntur maiores facere cumque harum reiciendis temporibus esse ex, non aliquid modi porro minus quasi
+								consectetur. Ipsam placeat, voluptatibus, necessitatibus inventore dolore numquam ipsum assumenda doloribus delectus
+								voluptate incidunt. Magnam ratione cumque ipsam.</p>
+				<a class="btn" href="#">Learn More</a>
+			</div>
+		</div>
+	</section>
+
+	<!-- PARTNERS -->
+	<section class="partners">
+		<h2 class="section-title">Partners</h2>
+		<div class="desktop-wrapper">
+			<div class="partner">
+				<div class="img-container">
+					<img class="img" src="img/nike.png" alt="">
+				</div>
+				<div class="description-container">
+					<h4 class="title">Nike</h4>
+					<p class="text">Nike pays top athletes in many sports to use their products and promote and advertise their technology and design.</p>
+				</div>
+			</div>
+			<div class="partner">
+				<div class="img-container">
+					<img class="img" src="img/puma.png" alt="">
+				</div>
+				<div class="description-container">
+					<h4 class="title">Puma</h4>
+					<p class="text">The company offers lines of shoes and sports clothing. Puma is a sponsor of many sporting events.</p>
+				</div>
+			</div>
+			<div class="partner">
+				<div class="img-container">
+					<img class="img" src="img/rebook.png" alt="">
+				</div>
+				<div class="description-container">
+					<h4 class="title">Rebook</h4>
+					<p class="text">Reebok produces and distributes fitness and sports items including shoes, workout clothing and accessories.</p>
+				</div>
+			</div>
+			<div class="partner">
+				<div class="img-container">
+					<img class="img" src="img/adidas.png" alt="">
+				</div>
+				<div class="description-container">
+					<h4 class="title">Adidas</h4>
+					<p class="text">It’s a German multinational corporation that designs and manufactures sports shoes, clothing and accessories.</p>
+				</div>
+			</div>
+		</div>
+	</section>
+
+	<!-- ALTRES ESPORTS -->
+	<section id="altres-esports" class="main-section">
+		<div class="filter">
+			<div class="description-container">
+				<h2 class="title">Altres esports</h2>
+				<h3 class="subtitle">Another way of understanding nature</h3>
+				<p class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Saepe ad quod excepturi numquam, odit alias veritatis,
+								itaque consequuntur maiores facere cumque harum reiciendis temporibus esse ex, non aliquid modi porro minus quasi
+								consectetur. Ipsam placeat, voluptatibus, necessitatibus inventore dolore numquam ipsum assumenda doloribus delectus
+								voluptate incidunt. Magnam ratione cumque ipsam.</p>
+				<a class="btn" href="#">Learn More</a>
+			</div>
+		</div>
+	</section>
+
+	<!-- FOOTER -->
 	<footer class="main-footer">
 		<div class="wrapper">
 			<div class="description-container">
@@ -100,7 +207,7 @@
 				</ul>
 			</div>
 			<div class="description-container">
-				<h4 class="title">About our Company</h4>
+				<h4 class="title">About Us</h4>
 				<p class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iure eligendi ratione beatae
 								eum voluptas repellendus hic deleniti, voluptates repudiandae, ipsam, aperiam fugit sed,
 								soluta totam dolores. Quasi reiciendis non quia mollitia voluptatem ipsa beatae porro!</p>
@@ -127,6 +234,7 @@
 		<p>&copy;Copyright 2017 DH SPORTS. All rights reserved</p>
 	</footer>
 
+	<!-- JS -->
 	<script src="js/jquery.min.js"></script>
 	<script src="js/nav.js"></script>
 
