Added flexbox on trainers, partners and features section

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 	<!-- TRAINERS -->
 	<section class="trainers">
 		<h2 class="section-title">Trainers</h2>
-		<div class="desktop-wrapper">
+		<div class="flexbox-wrapper">
 		    <div class="trainer">
 		        <div class="img-container">
 		            <img class="img" src="img/ppl.jpg" alt="">
@@ -140,7 +140,7 @@
 	<!-- PARTNERS -->
 	<section class="partners">
 		<h2 class="section-title">Partners</h2>
-		<div class="desktop-wrapper">
+		<div class="flexbox-wrapper">
 			<div class="partner">
 				<div class="img-container">
 					<img class="img" src="img/nike.png" alt="">
