--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 			<div class="description-container">
 				<h4 class="title">Awesome Product</h4>
 				<p class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore quasi alias magnam animi odit dolores.</p>
-				<a class="btn" href="#">Learn More</a>
+				<a class="btn" href="#">Read More</a>
 			</div>
 		</div>
 		<div class="feature">
@@ -58,7 +58,7 @@
 			<div class="description-container">
 				<h4 class="title">Kill Deadlines</h4>
 				<p class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore quasi alias magnam animi odit dolores.</p>
-				<a class="btn" href="#">Learn More</a>
+				<a class="btn" href="#">Read More</a>
 			</div>
 		</div>
 		<div class="feature">
@@ -68,7 +68,7 @@
 			<div class="description-container">
 				<h4 class="title">Knowledge is Power</h4>
 				<p class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore quasi alias magnam animi odit dolores.</p>
-				<a class="btn" href="#">Learn More</a>
+				<a class="btn" href="#">Read More</a>
 			</div>
 		</div>
 	</section>
@@ -83,7 +83,7 @@
 								itaque consequuntur maiores facere cumque harum reiciendis temporibus esse ex, non aliquid modi porro minus quasi
 								consectetur. Ipsam placeat, voluptatibus, necessitatibus inventore dolore numquam ipsum assumenda doloribus delectus
 								voluptate incidunt. Magnam ratione cumque ipsam.</p>
-				<a class="btn" href="#">Learn More</a>
+				<a class="btn" href="#">Read More</a>
 			</div>
 		</div>
 	</section>
@@ -132,7 +132,7 @@
 								itaque consequuntur maiores facere cumque harum reiciendis temporibus esse ex, non aliquid modi porro minus quasi
 								consectetur. Ipsam placeat, voluptatibus, necessitatibus inventore dolore numquam ipsum assumenda doloribus delectus
 								voluptate incidunt. Magnam ratione cumque ipsam.</p>
-				<a class="btn" href="#">Learn More</a>
+				<a class="btn" href="#">Read More</a>
 			</div>
 		</div>
 	</section>
@@ -190,48 +190,31 @@
 								itaque consequuntur maiores facere cumque harum reiciendis temporibus esse ex, non aliquid modi porro minus quasi
 								consectetur. Ipsam placeat, voluptatibus, necessitatibus inventore dolore numquam ipsum assumenda doloribus delectus
 								voluptate incidunt. Magnam ratione cumque ipsam.</p>
-				<a class="btn" href="#">Learn More</a>
+				<a class="btn" href="#">Read More</a>
 			</div>
 		</div>
 	</section>
 
 	<!-- FOOTER -->
 	<footer class="main-footer">
-		<div class="wrapper">
-			<div class="description-container">
-				<h4 class="title">Contact</h4>
-				<ul>
-					<li>Carrer del Puig Rom, 96</li>
-					<li>17480 Roses, Girona</li>
-					<li><a href="">info@dh-sports.es</a></li>
-				</ul>
-			</div>
-			<div class="description-container">
-				<h4 class="title">About Us</h4>
-				<p class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iure eligendi ratione beatae
-								eum voluptas repellendus hic deleniti, voluptates repudiandae, ipsam, aperiam fugit sed,
-								soluta totam dolores. Quasi reiciendis non quia mollitia voluptatem ipsa beatae porro!</p>
-			</div>
+		<div class="flexbox-wrapper">
+			<ul class="social-icons">
+				<li>
+					<a class="icon-facebook" href="#"><i class="fa fa-facebook"></i></a>
+				</li>
+				<li>
+					<a class="icon-twitter" href="#"><i class="fa fa-twitter"></i></a>
+				</li>
+				<li>
+					<a class="icon-instagram" href="#"><i class="fa fa-instagram"></i></a>
+				</li>
+				<li>
+					<a class="icon-youtube" href="#"><i class="fa fa-youtube-play"></i></a>
+				</li>
+			</ul>
+			<a href="/"><img class="footer-logo" src="img/logo-mini.png" alt=""></a>
+			<p class="text">&copy;Copyright 2017 DH SPORTS. All rights reserved</p>
 		</div>
-		<hr>
-		<ul class="social-icons">
-			<li>
-				<a href="#"><i class="fa fa-facebook"></i></a>
-			</li>
-			<li>
-				<a href="#"><i class="fa fa-twitter"></i></a>
-			</li>
-			<li>
-				<a href="#"><i class="fa fa-instagram"></i></a>
-			</li>
-			<li>
-				<a href="#"><i class="fa fa-youtube-play"></i></a>
-			</li>
-		</ul>
-	</footer>
-
-	<footer class="secondary-footer">
-		<p>&copy;Copyright 2017 DH SPORTS. All rights reserved</p>
 	</footer>
 
 	<!-- JS -->
