added desktop nav

--- a/index.html
+++ b/index.html
@@ -13,34 +13,33 @@
 <body>
 
     <!-- HEADER -->
-    <nav class="header">
-		<a href="#"><img class="nav-logo" src="img/logo.png" alt=""></a>
+    <header id="header" class="header">
+		<a href="#header"><img class="nav-logo" src="img/logo.png" alt=""></a>
 		<div class="nav-handler">
 			<div class="icon-menu"></div>
 		</div>
         <ul class="nav">
-            <li><a href="#">Home</a></li>
-            <li><a href="#">Portfolio</a></li>
-            <li><a href="#">Features</a></li>
+			<li><a href="#home">Home</a></li>
+			<li><a href="#">Portfolio</a></li>
+			<li><a href="#">Features</a></li>
             <li><a href="#">About</a></li>
             <li><a href="#">Contact</a></li>
         </ul>
-    </nav>
-
+    </header>
 	<!-- COVER -->
-	<section class="cover">
+	<div class="cover">
 		<div class="filter">
 			<div class="description-container">
-				<h1 class="title"><span class="title-red">Run fast,</span><br>go past</h1>
+				<h1 class="title"><span class="title-red">A nice slogan </span>here</h1>
 				<p class="text"> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellendus, distinctio.
 					Delectus consectetur culpa, quo nam. Numquam optio, deserunt ea libero. Error,
 					natus optio enim qui.</p>
 			</div>
 		</div>
-	</section>
+	</div>
 
 	<!-- FEATURES -->
-	<section class="features">
+	<section id="features" class="features">
 		<div class="feature">
 			<div class="icon-container">
 				<span class="fa fa-address-card-o"></span>
@@ -212,7 +211,7 @@
 					<a class="icon-youtube" href="#"><i class="fa fa-youtube-play"></i></a>
 				</li>
 			</ul>
-			<a href="/"><img class="footer-logo" src="img/logo-mini.png" alt=""></a>
+			<a href="#header"><img class="footer-logo" src="img/logo-mini.png" alt=""></a>
 			<p class="text">&copy;Copyright 2017 DH SPORTS. All rights reserved</p>
 		</div>
 	</footer>
