--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<!-- Google Fonts  -->
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:100,200,400,600|Open+Sans:200,400,600,900">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:200,400,600,900|PT+Sans:100,200,400,600">
 	<!-- Custom CSS  -->
     <link rel="stylesheet" href="css/style.css">
     <title>DH SPORTS</title>
@@ -39,36 +39,39 @@
 	</div>
 
 	<!-- FEATURES -->
-	<section id="features" class="features">
-		<div class="feature">
-			<div class="icon-container">
-				<span class="fa fa-address-card-o"></span>
-			</div>
-			<div class="description-container">
-				<h4 class="title">Awesome Product</h4>
-				<p class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore quasi alias magnam animi odit dolores.</p>
-				<a class="btn" href="#">Read More</a>
-			</div>
-		</div>
-		<div class="feature">
-			<div class="icon-container">
-				<span class="fa fa-clock-o"></span>
-			</div>
-			<div class="description-container">
-				<h4 class="title">Kill Deadlines</h4>
-				<p class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore quasi alias magnam animi odit dolores.</p>
-				<a class="btn" href="#">Read More</a>
-			</div>
-		</div>
-		<div class="feature">
-			<div class="icon-container">
-				<span class="fa fa-book"></span>
-			</div>
-			<div class="description-container">
-				<h4 class="title">Knowledge is Power</h4>
-				<p class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore quasi alias magnam animi odit dolores.</p>
-				<a class="btn" href="#">Read More</a>
-			</div>
+	<section id="services" class="services">
+		<h2 class="section-title">Services</h2>
+		<div class="flexbox-wrapper">
+		    <div class="service">
+		        <div class="icon-container">
+		            <span class="fa fa-address-card-o"></span>
+		        </div>
+		        <div class="description-container">
+		            <h4 class="title">Awesome Product</h4>
+		            <p class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore quasi alias magnam animi odit dolores.</p>
+		            <a class="btn" href="#">Read More</a>
+		        </div>
+		    </div>
+		    <div class="service">
+		        <div class="icon-container">
+		            <span class="fa fa-clock-o"></span>
+		        </div>
+		        <div class="description-container">
+		            <h4 class="title">Kill Deadlines</h4>
+		            <p class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore quasi alias magnam animi odit dolores.</p>
+		            <a class="btn" href="#">Read More</a>
+		        </div>
+		    </div>
+		    <div class="service">
+		        <div class="icon-container">
+		            <span class="fa fa-book"></span>
+		        </div>
+		        <div class="description-container">
+		            <h4 class="title">Knowledge is Power</h4>
+		            <p class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore quasi alias magnam animi odit dolores.</p>
+		            <a class="btn" href="#">Read More</a>
+		        </div>
+		    </div>
 		</div>
 	</section>
 
@@ -77,7 +80,7 @@
 		<div class="filter">
 			<div class="description-container">
 				<h2 class="title">Marxa Trail pic de l'aliga</h2>
-				<h3 class="subtitle">Another way of understanding nature</h3>
+				<h3 class="subtitle">Quorum altera prosunt, nocent altera</h3>
 				<p class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Saepe ad quod excepturi numquam, odit alias veritatis,
 								itaque consequuntur maiores facere cumque harum reiciendis temporibus esse ex, non aliquid modi porro minus quasi
 								consectetur. Ipsam placeat, voluptatibus, necessitatibus inventore dolore numquam ipsum assumenda doloribus delectus
@@ -96,7 +99,7 @@
 		            <img class="img" src="img/ppl.jpg" alt="">
 		        </div>
 		        <div class="description-container">
-		            <h4 class="title">Jordi Vicens</h4>
+		            <h4 class="title">Jordi</h4>
 		            <p class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore quasi alias magnam animi odit dolores.</p>
 		        </div>
 		    </div>
@@ -126,7 +129,7 @@
 		<div class="filter">
 			<div class="description-container">
 				<h2 class="title">Esports de platja</h2>
-				<h3 class="subtitle">Another way of understanding nature</h3>
+				<h3 class="subtitle">Quorum altera prosunt, nocent altera</h3>
 				<p class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Saepe ad quod excepturi numquam, odit alias veritatis,
 								itaque consequuntur maiores facere cumque harum reiciendis temporibus esse ex, non aliquid modi porro minus quasi
 								consectetur. Ipsam placeat, voluptatibus, necessitatibus inventore dolore numquam ipsum assumenda doloribus delectus
@@ -146,7 +149,7 @@
 				</div>
 				<div class="description-container">
 					<h4 class="title">Nike</h4>
-					<p class="text">Nike pays top athletes in many sports to use their products and promote and advertise their technology and design.</p>
+					<p class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugit modi provident, impedit cumque consequatur eos?</p>
 				</div>
 			</div>
 			<div class="partner">
@@ -155,7 +158,7 @@
 				</div>
 				<div class="description-container">
 					<h4 class="title">Puma</h4>
-					<p class="text">The company offers lines of shoes and sports clothing. Puma is a sponsor of many sporting events.</p>
+					<p class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugit modi provident, impedit cumque consequatur eos?</p>
 				</div>
 			</div>
 			<div class="partner">
@@ -164,7 +167,7 @@
 				</div>
 				<div class="description-container">
 					<h4 class="title">Rebook</h4>
-					<p class="text">Reebok produces and distributes fitness and sports items including shoes, workout clothing and accessories.</p>
+					<p class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugit modi provident, impedit cumque consequatur eos?</p>
 				</div>
 			</div>
 			<div class="partner">
@@ -173,7 +176,7 @@
 				</div>
 				<div class="description-container">
 					<h4 class="title">Adidas</h4>
-					<p class="text">It’s a German multinational corporation that designs and manufactures sports shoes, clothing and accessories.</p>
+					<p class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugit modi provident, impedit cumque consequatur eos?</p>
 				</div>
 			</div>
 		</div>
@@ -184,7 +187,7 @@
 		<div class="filter">
 			<div class="description-container">
 				<h2 class="title">Altres esports</h2>
-				<h3 class="subtitle">Another way of understanding nature</h3>
+				<h3 class="subtitle">Quorum altera prosunt, nocent altera</h3>
 				<p class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Saepe ad quod excepturi numquam, odit alias veritatis,
 								itaque consequuntur maiores facere cumque harum reiciendis temporibus esse ex, non aliquid modi porro minus quasi
 								consectetur. Ipsam placeat, voluptatibus, necessitatibus inventore dolore numquam ipsum assumenda doloribus delectus
