added contact form

--- a/index.html
+++ b/index.html
@@ -90,55 +90,6 @@
 		</div>
 	</section>
 
-	<!-- TRAINERS -->
-	<section class="trainers">
-		<h2 class="section-title">Trainers</h2>
-		<div class="flexbox-wrapper">
-		    <div class="trainer">
-		        <div class="img-container">
-		            <img class="img" src="img/ppl.jpg" alt="">
-		        </div>
-		        <div class="description-container">
-		            <h4 class="title">Jordi</h4>
-		            <p class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore quasi alias magnam animi odit dolores.</p>
-		        </div>
-		    </div>
-		    <div class="trainer">
-		        <div class="img-container">
-		            <img class="img" src="img/ppl.jpg" alt="">
-		        </div>
-		        <div class="description-container">
-		            <h4 class="title">Alfons</h4>
-		            <p class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore quasi alias magnam animi odit dolores.</p>
-		        </div>
-		    </div>
-		    <div class="trainer">
-		        <div class="img-container">
-		            <img class="img" src="img/ppl.jpg" alt="">
-		        </div>
-		        <div class="description-container">
-		            <h4 class="title">Nelson</h4>
-		            <p class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore quasi alias magnam animi odit dolores.</p>
-		        </div>
-		    </div>
-		</div>
-	</section>
-
-	<!-- ESPORTS PLATJA -->
-	<section id="esports-platja" class="main-section">
-		<div class="filter">
-			<div class="description-container">
-				<h2 class="title">Esports de platja</h2>
-				<h3 class="subtitle">Quorum altera prosunt, nocent altera</h3>
-				<p class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Saepe ad quod excepturi numquam, odit alias veritatis,
-								itaque consequuntur maiores facere cumque harum reiciendis temporibus esse ex, non aliquid modi porro minus quasi
-								consectetur. Ipsam placeat, voluptatibus, necessitatibus inventore dolore numquam ipsum assumenda doloribus delectus
-								voluptate incidunt. Magnam ratione cumque ipsam.</p>
-				<a class="btn" href="#">Read More</a>
-			</div>
-		</div>
-	</section>
-
 	<!-- PARTNERS -->
 	<section class="partners">
 		<h2 class="section-title">Partners</h2>
@@ -182,6 +133,55 @@
 		</div>
 	</section>
 
+	<!-- ESPORTS PLATJA -->
+	<section id="esports-platja" class="main-section">
+		<div class="filter">
+			<div class="description-container">
+				<h2 class="title">Esports de platja</h2>
+				<h3 class="subtitle">Quorum altera prosunt, nocent altera</h3>
+				<p class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Saepe ad quod excepturi numquam, odit alias veritatis,
+								itaque consequuntur maiores facere cumque harum reiciendis temporibus esse ex, non aliquid modi porro minus quasi
+								consectetur. Ipsam placeat, voluptatibus, necessitatibus inventore dolore numquam ipsum assumenda doloribus delectus
+								voluptate incidunt. Magnam ratione cumque ipsam.</p>
+				<a class="btn" href="#">Read More</a>
+			</div>
+		</div>
+	</section>
+
+	<!-- TRAINERS -->
+	<section class="trainers">
+		<h2 class="section-title">Trainers</h2>
+		<div class="flexbox-wrapper">
+		    <div class="trainer">
+		        <div class="img-container">
+		            <img class="img" src="img/ppl.jpg" alt="">
+		        </div>
+		        <div class="description-container">
+		            <h4 class="title">Jordi</h4>
+		            <p class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore quasi alias magnam animi odit dolores.</p>
+		        </div>
+		    </div>
+		    <div class="trainer">
+		        <div class="img-container">
+		            <img class="img" src="img/ppl.jpg" alt="">
+		        </div>
+		        <div class="description-container">
+		            <h4 class="title">Alfons</h4>
+		            <p class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore quasi alias magnam animi odit dolores.</p>
+		        </div>
+		    </div>
+		    <div class="trainer">
+		        <div class="img-container">
+		            <img class="img" src="img/ppl.jpg" alt="">
+		        </div>
+		        <div class="description-container">
+		            <h4 class="title">Nelson</h4>
+		            <p class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore quasi alias magnam animi odit dolores.</p>
+		        </div>
+		    </div>
+		</div>
+	</section>
+
 	<!-- ALTRES ESPORTS -->
 	<section id="altres-esports" class="main-section">
 		<div class="filter">
@@ -196,6 +196,32 @@
 			</div>
 		</div>
 	</section>
+
+    <section class="contact">
+		<h2 class="section-title">Contact</h2>
+	    <div class="wrapper">
+	        <form class="contact-form" action="php/mail.php" method="POST">
+				<p class="form-description">Please don't hesitate to contact me if you have any questions, comments or messages. I'll try to respond to everything!</p>
+	            <div class="row">
+	                <label class="label" for="name">Name</label><br>
+	                <input class="input" name="name" type="text" value=""><br>
+	            </div>
+	            <div class="row">
+	                <label class="label" for="phone">Phone</label><br>
+	                <input class="input" name="phone" type="text" value=""><br>
+	            </div>
+	            <div class="row">
+	                <label class="label" for="email">Mail</label><br>
+	                <input class="input" name="email" type="text" value=""><br>
+	            </div>
+	            <div class="row">
+	                <label class="label" for="message">Message</label><br>
+	                <textarea class="input" name="message" rows="10" cols="50"></textarea><br>
+	            </div>
+	            <input class="btn" id="submit_button" type="submit" value="Enviar" />
+	        </form>
+	    </div>
+</section>
 
 	<!-- FOOTER -->
 	<footer class="main-footer">
